Fix input clipping

--- a/src/components/AmountInput.module.css
+++ b/src/components/AmountInput.module.css
@@ -21,7 +21,7 @@
   color: var(--brown-5);
   height: 100%;
   width: 100%;
-  padding: 2rem 1rem;
+  padding: 2rem 0;
   -moz-appearance: textfield;
 }
 
